# src/controllers/portController.js
@@ -2,14 +2,14 @@ import SmoothieboardInterface from '../lib/smoothieboardInterface'
 
 export function getPort(request, response){
 	response.send({
-		name : PortControl.port
+		name : SmoothieboardInterface.portDevice
 	})
 }
 
 export function setPort(request, response){
-	let newPort = request.swagger.params.port.value.name
-	SmoothieboardInterface.port = newPort
+	let port = request.swagger.params.port.value.name
+	SmoothieboardInterface.openPort(port)
 	response.send({
-		name : newPort
+		name : port
 	})
 }
